5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4374/executions/1613_1800.log
== SUBMITION (2019-04-04 18:15:01) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print (min(a,b,c))
print ((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.154799
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
20
25
30
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
235
350
400
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2
90
120
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:15:34) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print (min(a,b,c))
print ((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))
-- OUTPUT:
20
25
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:15:54) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print (min(a,b,c))
print ((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.148596
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
20
25
30
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
235
350
400
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2
90
120
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:16:06) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print (min(a,b,c))
print ((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))
-- OUTPUT:
20
25
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:16:13) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print (min(a,b,c))
print ((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))
-- OUTPUT:
20
25
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:16:21) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print (min(a,b,c))
print ((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.14038
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
20
25
30
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
235
350
400
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2
90
120
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:16:25) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print (min(a,b,c))
print ((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))
-- OUTPUT:
20
25
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:16:43) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print (min(a,b,c))
print ((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.1452
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
20
25
30
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
235
350
400
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2
90
120
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:17:06) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print (min(a,b,c))
print ((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))
-- OUTPUT:
20
25
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:17:17) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print (min(a,b,c))
print ((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.196543
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
20
25
30
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
235
350
400
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2
90
120
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:17:17) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print (min(a,b,c))
print ((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))
-- OUTPUT:
20
25
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:17:24) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print (min(a,b,c))
print ((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.146847
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
20
25
30
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
235
350
400
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2
90
120
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:17:26) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print (min(a,b,c))
print ((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.207511
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
20
25
30
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
235
350
400
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2
90
120
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:17:26) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print (min(a,b,c))
print ((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.212436
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
235
350
400
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2
90
120
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:17:26) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print (min(a,b,c))
print ((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.102494
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
20
25
30
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
235
350
400
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2
90
120
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:17:48) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print (min(a,b,c))
print ((a+b+c)-min(a,b,c)-max(a,b,c))
print (max(a,b,c))
-- OUTPUT:
20
25
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:17:52) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print (min(a,b,c))
print ((a+b+c)-min(a,b,c)-max(a,b,c))
print (max(a,b,c))
-- EXECUTION TIME:
0.160738
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
20
25
30
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
235
350
400
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2
90
120
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:17:55) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print (min(a,b,c))
print ((a+b+c)-min(a,b,c)-max(a,b,c))
print (max(a,b,c))
-- OUTPUT:
20
25
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:17:59) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print (min(a,b,c))
print ((a+b+c)-min(a,b,c)-max(a,b,c))
print (max(a,b,c))
-- EXECUTION TIME:
0.186382
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
20
25
30
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
235
350
400
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2
90
120
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:21:51) 
-- CODE:
a=float(input"digite o valor")
-- ERROR:
File "XXXX", line 1
    a=float(input"digite o valor")
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:22:08) 
-- CODE:
a=float(input("digite o valor"))
-- ERROR:
File "XXXX", line 1
    a=float(input"digite o valor")
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:25:36) 
-- CODE:
a=float(input("digite o valor"))
b=float(input("digite o valor"))
c=float(input("digite o valor"))
total= (a**2+b**2+c**2)/(a+b+c)
print(round(total, 7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:25:46) 
-- CODE:
a=float(input("digite o valor"))
b=float(input("digite o valor"))
c=float(input("digite o valor"))
total= (a**2+b**2+c**2)/(a+b+c)
print(round(total, 7))
-- EXECUTION TIME:
0.146701
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:26:38) 
-- CODE:
a=float(input("digite o valor"))
b=float(input("digite o valor"))
c=float(input("digite o valor"))
total= (a**2+b**2+c**2)/(a+b+c)
print(round(total, 7))
-- EXECUTION TIME:
0.200699
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:26:40) 
-- CODE:
a=float(input("digite o valor"))
b=float(input("digite o valor"))
c=float(input("digite o valor"))
total= (a**2+b**2+c**2)/(a+b+c)
print(round(total, 7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:26:49) 
-- CODE:
a=float(input("digite o valor"))
b=float(input("digite o valor"))
c=float(input("digite o valor"))
total= (a**2+b**2+c**2)/(a+b+c)
print(round(total, 7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:26:56) 
-- CODE:
a=float(input("digite o valor"))
b=float(input("digite o valor"))
c=float(input("digite o valor"))
total= (a**2+b**2+c**2)/(a+b+c)
print(round(total, 7))
-- EXECUTION TIME:
0.212138
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
